# Workshop_aberto-ETL_do_zero

./: .env  Dockerfile  README.md  app.py  duckdb.db  exemplo.env  pipeline_00.py  pipeline_01.py  pipeline_02.py  pyproject.toml
sql/: create_table.sql
